# segmenter

./: .cirrus.yml  .travis.yml  CMakeLists.txt  README.md  packer.c  packer.h  segmenter.c  segmenter.cpp  segmenter.h  segmenter.hpp
packer/: packer.c  packer.h
tests/: CMakeLists.txt  test_segmenter.c  test_segmenter.cpp
util/: types.h
